add pathwar env vars to nginx conf for lua access

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,10 @@ worker_processes  1;
 
 #pid        logs/nginx.pid;
 
+env PATHWAR_API_SCHEME;
+env PATHWAR_API_USER;
+env PATHWAR_API_PASSWORD;
+env PATHWAR_API_HOST;
 
 events {
     worker_connections  1024;
