--- a/conf_generation/nginx_default.conf
+++ b/conf_generation/nginx_default.conf
@@ -1,7 +1,7 @@
 server {
 
-       listen 80;
-       server_name _ default_server;
+       listen 80 default_server;
+       server_name _;
 
        set $level_id '0000-0000-0000';
 
